[+] Boxing sample with IEnamerable

--- a/MemoryAllocationSamples/MemoryAllocationSamples.csproj
+++ b/MemoryAllocationSamples/MemoryAllocationSamples.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Action\ActionAsAnonymousDelegate.cs" />
     <Compile Include="Boxing\BoxingValueType.cs" />
+    <Compile Include="Boxing\EnumerableAsParameter.cs" />
+    <Compile Include="Boxing\ListAsParameter.cs" />
     <Compile Include="Enumerators\EnamerableFromArray.cs" />
     <Compile Include="Enumerators\SimpleEnumerableCollection.cs" />
     <Compile Include="Event\EventAsAnonymouseDelegate.cs" />
