[+] Enum for IL investigation.

--- a/MemoryAllocationSamples/MemoryAllocationSamples.csproj
+++ b/MemoryAllocationSamples/MemoryAllocationSamples.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Boxing\ListAsParameter.cs" />
     <Compile Include="Enumerators\EnamerableFromArray.cs" />
     <Compile Include="Enumerators\SimpleEnumerableCollection.cs" />
+    <Compile Include="Enum\SimpleEnum.cs" />
     <Compile Include="Event\EventAsAnonymouseDelegate.cs" />
     <Compile Include="Event\EventAsPublicMethod.cs" />
     <Compile Include="Event\EventAsLambda.cs" />
